--- a/index.html
+++ b/index.html
@@ -1,77 +1,82 @@
-<!doctype html>
-@media (prefers-color-scheme: light) {
-:root { --text: #0f1216; --text-muted: #273142; }
-.wrap { border-color: rgba(0,0,0,0.12); }
-.logo { background: rgba(255,255,255,0.6); border-color: rgba(0,0,0,0.15); color: #0f1216; }
-}
-</style>
-
-
-<!-- Datos estructurados -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "Organization",
-"name": "Imperial Defense Group",
-"url": "https://imperialdefensegroup.github.io/home/",
-"logo": "https://imperialdefensegroup.github.io/home/assets/favicon.svg"
-}
-</script>
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "WebSite",
-"name": "Imperial Defense Group",
-"url": "https://imperialdefensegroup.github.io/home/",
-"potentialAction": {
-"@type": "SearchAction",
-"target": "https://www.google.com/search?q=site:imperialdefensegroup.github.io+{search_term_string}",
-"query-input": "required name=search_term_string"
-}
-}
-</script>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Imperial Defense Group</title>
+  <meta name="description" content="Imperial Defense Group: un espacio sobre armamento, tácticas, historia militar y policial, y tendencias actuales en el mundo táctico y armamentístico.">
+  <meta name="robots" content="index, follow">
+  <style>
+    :root {
+      --bg: #0b0e12;
+      --fg: #e9ecef;
+      --muted: #a8b3bd;
+      --accent: #36a2ff;
+    }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+      padding: 0 20px;
+      line-height: 1.6;
+    }
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 40px 0;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 20px;
+    }
+    ul {
+      text-align: left;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+    li {
+      margin-bottom: 12px;
+    }
+    a.cta {
+      display: block;
+      width: fit-content;
+      margin: 40px auto 0;
+      padding: 14px 28px;
+      border-radius: 8px;
+      background: var(--accent);
+      color: #001a2b;
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 1.1rem;
+    }
+    a.cta:hover {
+      opacity: 0.9;
+    }
+  </style>
 </head>
 <body>
-<main class="wrap" role="main">
-<header>
-<div class="logo" aria-hidden="true">IDG</div>
-<div>
-<h1>Bienvenido a Imperial Defense Group</h1>
-<p class="lead">Blog de historia, innovación y análisis del ámbito táctico.</p>
-</div>
-</header>
+  <main>
+    <h1>Bienvenido a Imperial Defense Group</h1>
 
+    <p>El mundo táctico y armamentístico es mucho más que equipos y tecnología: es historia, innovación, disciplina y personas que dedican su vida a este ámbito.</p>
 
-<section aria-labelledby="intro">
-<p id="intro">
-El mundo táctico y armamentístico es mucho más que equipos y tecnología: es historia, innovación, disciplina y personas que dedican su vida a este ámbito.
-</p>
-<p>
-En este espacio encontrarás artículos sobre:
-</p>
-<ul>
-<li><strong>Armamento y equipamiento táctico:</strong> análisis detallados de armas, relojes militares, textiles avanzados y materiales de última generación.</li>
-<li><strong>Unidades y operaciones históricas:</strong> un repaso a los cuerpos y formaciones que han marcado la historia militar y policial.</li>
-<li><strong>Figuras de referencia:</strong> protagonistas, veteranos, diseñadores y especialistas que han dejado huella en este sector.</li>
-<li><strong>Tendencias actuales:</strong> evolución de la industria, nuevas tecnologías y desarrollos que están cambiando el futuro del ámbito táctico.</li>
-</ul>
-<p>
-Nuestro objetivo es ofrecer información rigurosa, con una visión crítica y en profundidad, para quienes buscan ir más allá de lo superficial y comprender verdaderamente este mundo.
-</p>
-</section>
+    <p>En este espacio encontrarás artículos sobre:</p>
+    <ul>
+      <li><strong>Armamento y equipamiento táctico:</strong> análisis detallados de armas, relojes militares, textiles avanzados y materiales de última generación.</li>
+      <li><strong>Unidades y operaciones históricas:</strong> un repaso a los cuerpos y formaciones que han marcado la historia militar y policial.</li>
+      <li><strong>Figuras de referencia:</strong> protagonistas, veteranos, diseñadores y especialistas que han dejado huella en este sector.</li>
+      <li><strong>Tendencias actuales:</strong> evolución de la industria, nuevas tecnologías y desarrollos que están cambiando el futuro del ámbito táctico.</li>
+    </ul>
 
+    <p>Nuestro objetivo es ofrecer información rigurosa, con una visión crítica y en profundidad, para quienes buscan ir más allá de lo superficial y comprender verdaderamente este mundo.</p>
 
-<hr aria-hidden="true" />
-
-
-<footer class="footer" role="contentinfo">
-<span class="badge">imperialdefensegroup.github.io/home</span>
-<span>© <span id="year"></span> Imperial Defense Group</span>
-</footer>
-</main>
-
-
-<noscript>Este sitio funciona sin JavaScript. El script solo se usa para el año del pie.</noscript>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+    <a class="cta" href="/articulos/">Ir a los artículos</a>
+  </main>
 </body>
 </html>
