--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="robots" content="index, follow">
   <style>
     :root {
-      --bg: #0b0e12;
-      --fg: #e9ecef;
-      --muted: #a8b3bd;
-      --accent: #36a2ff;
+      --bg: #6B6D76;   /* Wolf Grey */
+      --fg: #1a1a1a;   /* Texto oscuro */
+      --muted: #2e2e2e;
+      --accent: #1f5eff; /* Azul táctico */
     }
     body {
       margin: 0;
@@ -50,7 +50,7 @@
       padding: 14px 28px;
       border-radius: 8px;
       background: var(--accent);
-      color: #001a2b;
+      color: #fff;
       font-weight: bold;
       text-decoration: none;
       font-size: 1.1rem;
